--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
     <!-- header block -->
     <header class="header">
-      <div class="header__logo"></div>
+      <img src="./images/header-logo.svg" alt="Изображение карты России" class="header__logo">
       <nav class="header__lang-links">
         <a class="header__lang-link header__lang-link_link-active opacity" href="#">Ru</a>
         <a class="header__lang-link opacity" href="#">En</a>
@@ -46,7 +46,7 @@
           </ul>
       </section>
       <!-- photo-grid block -->
-      <section class="photo-grid">
+      <!-- <section class="photo-grid">
        <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на заснеженные горы" class="photo-grid__item">
        <img src="./images/photo-grid-tuman.jpg" alt="Волк на стогу сена в тумане" class="photo-grid__item">
@@ -59,9 +59,9 @@
        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на Корякскую сопку полуостров Камчатка" class="photo-grid__item">
        <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на заснеженный берег Байкала" class="photo-grid__item">
        <img src="./images/photo-grid-ergaki.jpg" alt="Горный пейзаж" class="photo-grid__item">
-      </section>
+      </section> -->
       <!-- places block -->
-      <section class="places">
+      <!-- <section class="places">
         <article class="place">
           <h3 class="place__title">Куршская коса</h3>
           <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__img">
@@ -151,19 +151,19 @@
             </p>
           </div>
         </article>
-      </section>
+      </section> -->
       <!-- cover block -->
-      <section class="cover">
+      <!-- <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <img class="cover__background" src="./images/cover-trains.jpg" alt="Изображение железнодорожных путей" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
         </a>
-      </section>
+      </section> -->
     <!-- </main> -->
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <nav class="footer__links">
         <a class="footer__link opacity" href="https://yandex.ru/maps" target="_blank">Карты</a>
         <a class="footer__link opacity" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
@@ -172,7 +172,7 @@
         <a class="footer__link opacity" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">&copy; 2022. Сергей Литвиненко</p>
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
