--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
       </section>
       <!-- photo-grid block -->
-      <!-- <section class="photo-grid">
+      <section class="photo-grid">
        <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на заснеженные горы" class="photo-grid__item">
        <img src="./images/photo-grid-tuman.jpg" alt="Волк на стогу сена в тумане" class="photo-grid__item">
@@ -59,22 +59,22 @@
        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на Корякскую сопку полуостров Камчатка" class="photo-grid__item">
        <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на заснеженный берег Байкала" class="photo-grid__item">
        <img src="./images/photo-grid-ergaki.jpg" alt="Горный пейзаж" class="photo-grid__item">
-      </section> -->
+      </section>
       <!-- places block -->
-      <!-- <section class="places">
+      <section class="places">
         <article class="place">
           <h3 class="place__title">Куршская коса</h3>
-          <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__img">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://park-kosa.ru" class="place__link opacity" target="_blank">park-kosa.ru</a>
           </div>
+          <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__img">
           <div class="place__description">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
-              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и
               исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
               и запах стального, прохладного моря.
@@ -83,11 +83,11 @@
         </article>
         <article class="place">
           <h3 class="place__title">Кольский</h3>
-          <img src="./images/place-kolsky.jpg" alt="Кольский полуостров" class="place__img">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link opacity" target="_blank">National Geographic</a>
           </div>
+          <img src="./images/place-kolsky.jpg" alt="Кольский полуостров" class="place__img">
           <div class="place__description">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -101,11 +101,11 @@
         </article>
         <article class="place">
           <h3 class="place__title">Алтай</h3>
-          <img src="./images/place-altai.jpg" alt="Алтайский край" class="place__img">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link opacity" target="_blank">Facebook</a>
           </div>
+          <img src="./images/place-altai.jpg" alt="Алтайский край" class="place__img">
           <div class="place__description">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А
@@ -119,28 +119,28 @@
         </article>
         <article class="place">
           <h3 class="place__title">Зимний Байкал</h3>
-          <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__img">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://vk.com/baikalmile" class="place__link opacity" target="_blank">https://vk.com/baikalmile</a>
           </div>
+          <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__img">
           <div class="place__description">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
               большой источник пресной воды и одно из красивейших мест в России.
             </p>
             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
-              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую
+              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как&nbsp;можно бóльшую
               скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
         </article>
         <article class="place">
           <h3 class="place__title">Карелия</h3>
-          <img src="./images/place-karelia.jpg" alt="Озеро в Карелии" class="place__img">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://vodlozero.ru" class="place__link opacity" target="_blank">http://vodlozero.ru/</a>
           </div>
+          <img src="./images/place-karelia.jpg" alt="Озеро в Карелии" class="place__img">
           <div class="place__description">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
               не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за
@@ -151,7 +151,7 @@
             </p>
           </div>
         </article>
-      </section> -->
+      </section>
       <!-- cover block -->
       <!-- <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
@@ -161,7 +161,7 @@
           </p>
         </a>
       </section> -->
-    <!-- </main> -->
+    </main>
     <!-- footer -->
     <!-- <footer class="footer">
       <nav class="footer__links">
