--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Путешествия по России</title>
 </head>
 <body class="root">
-  <div class="page">
+  <!-- <div class="page"> -->
     <!-- header block -->
     <header class="header">
       <img src="./images/header-logo.svg" alt="Изображение карты России" class="header__logo">
@@ -153,14 +153,14 @@
         </article>
       </section>
       <!-- cover block -->
-      <!-- <section class="cover">
+      <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <img class="cover__background" src="./images/cover-trains.jpg" alt="Изображение железнодорожных путей" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
         </a>
-      </section> -->
+      </section>
     </main>
     <!-- footer -->
     <!-- <footer class="footer">
@@ -173,6 +173,6 @@
       </nav>
       <p class="footer__copyright">&copy; 2022. Сергей Литвиненко</p>
     </footer> -->
-  </div>
+  <!-- </div> -->
 </body>
 </html>
