Сделаны все блоки в адаптиве

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Путешествия по России</title>
 </head>
 <body class="root">
-  <!-- <div class="page"> -->
+  <div class="page">
     <!-- header block -->
     <header class="header">
       <img src="./images/header-logo.svg" alt="Изображение карты России" class="header__logo">
@@ -163,7 +163,7 @@
       </section>
     </main>
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <nav class="footer__links">
         <a class="footer__link opacity" href="https://yandex.ru/maps" target="_blank">Карты</a>
         <a class="footer__link opacity" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
@@ -172,7 +172,7 @@
         <a class="footer__link opacity" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">&copy; 2022. Сергей Литвиненко</p>
-    </footer> -->
-  <!-- </div> -->
+    </footer>
+  </div>
 </body>
 </html>
