--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <a class="header__lang-link opacity" href="#">En</a>
       </nav>
     </header>
-    <!-- <main class="content"> -->
+    <main class="content">
       <!-- lead block -->
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка на боковой полке плацкартного вагона">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
@@ -155,7 +155,7 @@
       <!-- cover block -->
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-          <img class="cover__background" src="./images/cover-trains.jpg" alt="Изображение железнодорожных путей" target="_blank">
+          <img class="cover__background" src="./images/cover-trains.jpg" alt="Изображение железнодорожных путей">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
