--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- header block -->
     <header class="header">
       <img src="./images/header-logo.svg" alt="Изображение карты России" class="header__logo">
-      <nav class="header__lang-links">
-        <a class="header__lang-link header__lang-link_link-active opacity" href="#">Ru</a>
-        <a class="header__lang-link opacity" href="#">En</a>
-      </nav>
+      <ul class="header__lang-links">
+        <li class="header__lang-link-item"><a class="header__lang-link header__lang-link_active opacity" href="#">Ru</a></li>
+        <li class="header__lang-link-item"><a class="header__lang-link opacity" href="#">En</a></li>
+      </ul>
     </header>
     <main class="content">
       <!-- lead block -->
@@ -29,7 +29,7 @@
       </section>
       <!-- intro block -->
       <section class="intro">
-        <h3 class="intro__title">Чего мы там не видели?</h3>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
           вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
@@ -38,11 +38,11 @@
           20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
           отпуска.</p>
           <ul class="intro__list">
-            <li class="intro__list-item">Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__list-number">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+            <li>Природных заповедников <span class="intro__list-number">105</span></li>
+            <li>Аэропортов <span class="intro__list-number">241</span></li>
           </ul>
       </section>
       <!-- photo-grid block -->
@@ -63,7 +63,7 @@
       <!-- places block -->
       <section class="places">
         <article class="place">
-          <h3 class="place__title">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://park-kosa.ru" class="place__link opacity" target="_blank">park-kosa.ru</a>
@@ -82,7 +82,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link opacity" target="_blank">National Geographic</a>
@@ -100,7 +100,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link opacity" target="_blank">Facebook</a>
@@ -118,7 +118,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://vk.com/baikalmile" class="place__link opacity" target="_blank">https://vk.com/baikalmile</a>
@@ -135,7 +135,7 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://vodlozero.ru" class="place__link opacity" target="_blank">http://vodlozero.ru/</a>
